crates/deptree-cli/tests/snapshots/python_test__namespace_package_included_with_flag_mermaid.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: mermaid_output
---
flowchart TD
    subgraph pep420_namespace["pep420_namespace"]
    end
    legacy_namespace_submodule_module("legacy_namespace.submodule.module")
    normal_pkg_consumer("normal_pkg.consumer")
    pep420_namespace_sub_a_module_a("pep420_namespace.sub_a.module_a")
    pep420_namespace_sub_b_module_b("pep420_namespace.sub_b.module_b")
    normal_pkg_consumer("normal_pkg.consumer") --> legacy_namespace_submodule_module("legacy_namespace.submodule.module")
    normal_pkg_consumer("normal_pkg.consumer") --> pep420_namespace_sub_b_module_b("pep420_namespace.sub_b.module_b")
    pep420_namespace_sub_a_module_a("pep420_namespace.sub_a.module_a") --> normal_pkg_consumer("normal_pkg.consumer")
    pep420_namespace_sub_b_module_b("pep420_namespace.sub_b.module_b") --> pep420_namespace_sub_a_module_a("pep420_namespace.sub_a.module_a")
