crates/deptree-cli/tests/snapshots/python_test__namespace_package_with_orphans.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: dot_output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    subgraph cluster_pep420_namespace {
        label = "pep420_namespace";
        "pep420_namespace.sub_a";
        "pep420_namespace.sub_b";
    }
    "legacy_namespace.submodule";
    "legacy_namespace.submodule.module";
    "normal_pkg";
    "normal_pkg.consumer";
    "pep420_namespace.sub_a.module_a";
    "pep420_namespace.sub_b.module_b";
    "normal_pkg.consumer" -> "legacy_namespace.submodule.module";
    "normal_pkg.consumer" -> "pep420_namespace.sub_b.module_b";
    "pep420_namespace.sub_a.module_a" -> "normal_pkg.consumer";
    "pep420_namespace.sub_b.module_b" -> "pep420_namespace.sub_a.module_a";
}
