crates/deptree-cli/tests/snapshots/python_test__namespace_with_orphans_and_highlighting.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    // Note: Highlighted nodes are shown with light blue background
    subgraph cluster_root {
        label = "root";
        "normal_pkg";
        subgraph cluster_pep420_namespace {
            label = "pep420_namespace";
            "pep420_namespace.sub_a";
            "pep420_namespace.sub_b";
        }
    }
    "legacy_namespace.submodule";
    "legacy_namespace.submodule.module" [fillcolor=lightblue, style=filled];
    "normal_pkg";
    "normal_pkg.consumer" [fillcolor=lightblue, style=filled];
    "pep420_namespace.sub_a.module_a" [fillcolor=lightblue, style=filled];
    "pep420_namespace.sub_b.module_b" [fillcolor=lightblue, style=filled];
    "normal_pkg.consumer" -> "legacy_namespace.submodule.module";
    "normal_pkg.consumer" -> "pep420_namespace.sub_b.module_b";
    "pep420_namespace.sub_a.module_a" -> "normal_pkg.consumer";
    "pep420_namespace.sub_b.module_b" -> "pep420_namespace.sub_a.module_a";
}
