crates/deptree-cli/tests/snapshots/python_test__orphan_filtering_with_max_rank.snap
---
source: tests/python_test.rs
expression: output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "pkg_b.module_b";
}
