crates/deptree-cli/tests/snapshots/python_test__project_with_scripts.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: dot_output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    subgraph cluster_scripts {
        label = "scripts";
        "scripts.blah" [shape=box];
        "scripts.runner" [shape=box];
    }
    "foo.bar";
    "scripts.utils.helper" [shape=box];
    "scripts.blah" -> "foo.bar";
    "scripts.runner" -> "foo.bar";
    "scripts.runner" -> "scripts.utils.helper";
}
