crates/deptree-cli/tests/snapshots/python_test__sample_python_project_dot_output.snap
---
source: crates/deptree-cli/tests/python_test.rs
expression: dot_output
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "main";
    "pkg_a.module_a";
    "pkg_b.module_b";
    "main" -> "pkg_a.module_a";
    "main" -> "pkg_b.module_b";
    "pkg_a.module_a" -> "pkg_b.module_b";
}
