crates/deptree-cli/tests/snapshots/python_test__upstream_cli_with_internal_module_file_path.snap
---
source: tests/python_test.rs
expression: stdout
---
digraph dependencies {
    rankdir=LR;
    // Note: Scripts (files outside source root) are shown with box shape
    "foo.bar";
}
